0.11.0/_sources/gettingstarted/examples/gallery/auto_examples_processing/transformations/plot_preprocessing.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_processing/transformations/plot_preprocessing.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_transformations_plot_preprocessing.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_transformations_plot_preprocessing.py:


Chemometric preprocessing
=========================

This example demonstrates the standard preprocessing operations
available in SpectroChemPy: normalization, mean-centering, autoscaling,
Standard Normal Variate (SNV), and Multiplicative Scatter Correction (MSC).

.. GENERATED FROM PYTHON SOURCE LINES 16-19

.. code-block:: default


    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 20-21

Load a stacked IR dataset and select a single spectral region.

.. GENERATED FROM PYTHON SOURCE LINES 21-25

.. code-block:: default


    dataset = scp.read_omnic("irdata/nh4y-activation.spg")
    region = dataset[:, 4000.0:2000.0]








.. GENERATED FROM PYTHON SOURCE LINES 26-27

**Normalization** scales each spectrum.  The default is ``method='max'``.

.. GENERATED FROM PYTHON SOURCE LINES 27-31

.. code-block:: default


    norm = region.normalize(method="max", dim="x")
    _ = norm.plot(title="Max-normalized")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_001.png
   :alt: Max-normalized
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 32-34

**Mean-centering** subtracts the mean along a chosen dimension.
Here we center each spectrum individually (``dim='x'``).

.. GENERATED FROM PYTHON SOURCE LINES 34-38

.. code-block:: default


    centered = region.center(dim="x")
    _ = centered.plot(title="Mean-centered per spectrum")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_002.png
   :alt: Mean-centered per spectrum
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 39-41

**Autoscaling** mean-centers and divides by the standard deviation.
This is the classic z-score used before PCA or PLS.

.. GENERATED FROM PYTHON SOURCE LINES 41-45

.. code-block:: default


    scaled = region.autoscale(dim="x")
    _ = scaled.plot(title="Autoscaled (z-score) per spectrum")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_003.png
   :alt: Autoscaled (z-score) per spectrum
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 46-48

**Standard Normal Variate (SNV)** is a convenience wrapper that autoscales
each spectrum individually.  It is equivalent to ``autoscale(dim='x')``.

.. GENERATED FROM PYTHON SOURCE LINES 48-52

.. code-block:: default


    snv = region.snv()
    _ = snv.plot(title="SNV corrected")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_004.png
   :alt: SNV corrected
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 53-55

**Multiplicative Scatter Correction (MSC)** removes multiplicative and
additive scatter by regressing each spectrum against a mean reference.

.. GENERATED FROM PYTHON SOURCE LINES 55-59

.. code-block:: default


    msc = region.msc()
    _ = msc.plot(title="MSC corrected")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_005.png
   :alt: MSC corrected
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 60-62

This ends the example. Uncomment the next line to display the figures when
running the script directly with Python.

.. GENERATED FROM PYTHON SOURCE LINES 62-64

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.220 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_transformations_plot_preprocessing.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_preprocessing.py <plot_preprocessing.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_preprocessing.ipynb <plot_preprocessing.ipynb>`
