0.12.4/_sources/gettingstarted/examples/gallery/auto_examples_processing/transformations/plot_preprocessing.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_processing/transformations/plot_preprocessing.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_transformations_plot_preprocessing.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_transformations_plot_preprocessing.py:


Chemometric preprocessing
=========================

This example demonstrates the standard preprocessing operations
available in SpectroChemPy: normalization, mean-centering, autoscaling,
Standard Normal Variate (SNV), and Multiplicative Scatter Correction (MSC).

.. GENERATED FROM PYTHON SOURCE LINES 16-19

.. code-block:: Python


    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 20-22

Load the dataset
-----------------

.. GENERATED FROM PYTHON SOURCE LINES 22-25

.. code-block:: Python

    dataset = scp.read_omnic("irdata/nh4y-activation.spg")
    region = dataset[:, 4000.0:2000.0]








.. GENERATED FROM PYTHON SOURCE LINES 26-29

Normalization
--------------
Scales each spectrum.  The default is ``method='max'``:

.. GENERATED FROM PYTHON SOURCE LINES 29-32

.. code-block:: Python

    norm = region.normalize(method="max", dim="x")
    _ = norm.plot(title="Max-normalized")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_001.png
   :alt: Max-normalized
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 33-36

Mean-centering
---------------
Subtracts the mean along a chosen dimension:

.. GENERATED FROM PYTHON SOURCE LINES 36-39

.. code-block:: Python

    centered = region.center(dim="x")
    _ = centered.plot(title="Mean-centered per spectrum")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_002.png
   :alt: Mean-centered per spectrum
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_002.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 40-43

Autoscaling
------------
Mean-centers and divides by the standard deviation (z-score):

.. GENERATED FROM PYTHON SOURCE LINES 43-46

.. code-block:: Python

    scaled = region.autoscale(dim="x")
    _ = scaled.plot(title="Autoscaled (z-score) per spectrum")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_003.png
   :alt: Autoscaled (z-score) per spectrum
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 47-50

SNV and MSC
------------
Standard Normal Variate (SNV) — equivalent to ``autoscale(dim='x')``:

.. GENERATED FROM PYTHON SOURCE LINES 50-53

.. code-block:: Python

    snv = region.snv()
    _ = snv.plot(title="SNV corrected")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_004.png
   :alt: SNV corrected
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_004.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 54-55

Multiplicative Scatter Correction (MSC):

.. GENERATED FROM PYTHON SOURCE LINES 55-58

.. code-block:: Python

    msc = region.msc()
    _ = msc.plot(title="MSC corrected")




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_005.png
   :alt: MSC corrected
   :srcset: /gettingstarted/examples/gallery/auto_examples_processing/transformations/images/sphx_glr_plot_preprocessing_005.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 59-61

This ends the example. Uncomment the next line to display the figures when
running the script directly with Python.

.. GENERATED FROM PYTHON SOURCE LINES 61-63

.. code-block:: Python


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.992 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_transformations_plot_preprocessing.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_preprocessing.ipynb <plot_preprocessing.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_preprocessing.py <plot_preprocessing.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_preprocessing.zip <plot_preprocessing.zip>`
